# Android-Project-OpenCV-OpenGL

./: README.md  settings.gradle
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edgeviewer/: GLRenderer.java  MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
